# Workspace root for Soroban contracts (run `cargo test -p vault_factory` from here).
[workspace]
resolver = "2"
members = [
    "soroban-contracts/contracts/single_rwa_vault",
    "soroban-contracts/contracts/vault_factory",
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
