[package]
name = "vault_factory"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0.0" }
single_rwa_vault = { path = "../single_rwa_vault" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
single_rwa_vault = { path = "../single_rwa_vault", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils", "single_rwa_vault/testutils"]
